--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
@@ -34,7 +35,7 @@
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.5"
   },
-   "jest": {
+  "jest": {
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
